JDeploy experimentation